# CPPUTest-CMake

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  my_class.cpp
tests/: CMakeLists.txt  my_class.h  my_class_test.cpp
